Memory corruption in generator expression evaluation
Hello, I found a memory corruption, when evaluating a file(GENERATE
expression. Admittly it is a very contrieved (and bad CMake) example, but during evalution of a dependent expression in cmgenerationExpressionNode:1310, the static std::string prop
will be overwritten, which corrupts the char pointer prop
in the function Evaluate
in the targetPropNode. I attached a minimal CMakeLists.txt
to reproduce the issue and the output of drmemory with stacktraces to understand the issue.